--- a/style.css
+++ b/style.css
@@ -16,11 +16,15 @@ body{
     background-color: white;
 }
 
-.lorem{
+.darkred{
     color:#8B0000;
-    letter-spacing: 20px;
+    
 }
 
+.lorem{
+    color:#8B0000;
+    letter-spacing: 25px;
+}
 .bg-custom-mio
 {
    background:url(./media/mountains2.png), linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0) 85%), url(./media/switzerland-862870_1920.jpg);
@@ -31,9 +35,7 @@ body{
     
 }
 
-.font-size-custom
-{
- /* font-size: 20px; */
- opacity: 0.6;
-};
+.psize{
+    font-size: 40px;
+}
 
