--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://unpkg.com/css.gg@2.0.0/icons/css/git-commit.css');
 
 body{
     font-family: 'Nova Square', cursive;
@@ -48,7 +49,29 @@ body{
     top: -25px;
 }
 
-.lorem-border{
-    border-bottom: 10px solid;
-    border-radius: 10px;
+.gg-git-commit {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 6px;
+    height: 16px;
+    border-radius: 3px;
+    border-top: 80px solid;
+    border-bottom: 80px solid;
+    transform: rotate(90deg);
+    border-color: #890403;
+
+}
+.gg-git-commit::after {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    box-shadow: 0 0 0 2px;
+    border-radius: 100%;
+    left: 10;
+    top: 1px
 }
