--- a/style.css
+++ b/style.css
@@ -73,5 +73,12 @@ body{
     box-shadow: 0 0 0 2px;
     border-radius: 100%;
     left: 10;
-    top: 1px
+    top: -8px
+}
+.bgdr{
+    background-color: #890403;
+}
+
+.l_orem{
+    margin-bottom: -50px;
 }
